# HHMp4v2Test

./: README.md
app/: build.gradle
app/libs/include/: com_HHMp4v2_HHMp4v2.h
app/src/androidTest/java/com/vihivision/martin/hhmp4v2test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  HHMp4v2.c  mp4record.c  mp4record.h
app/src/main/java/com/HHMp4v2/: HHMp4v2.java
app/src/main/java/com/vihivision/martin/hhmp4v2test/: MainActivity.java  TestMp4Activity.java
app/src/main/res/layout/: activity_main.xml  main_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vihivision/martin/hhmp4v2test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
